--- a/Mission11/Views/Home/Index.cshtml
+++ b/Mission11/Views/Home/Index.cshtml
@@ -6,20 +6,13 @@
 
 <h1>Bookstore</h1>
 
-
+@*made a partial view for the book data to display*@
+ 
 @foreach (Book b in Model.Books)
 {
-    <h3>@b.Title</h3>
-
-    <ul>
-        <li>Author: @b.Author</li>
-        <li>Publisher: @b.Publisher</li>
-        <li>ISBN: @b.ISBN</li>
-        <li>Classification: @b.Classification</li>
-        <li>Category: @b.Category</li>
-        <li>Number of Pages: @b.PageCount</li>
-        <li>Price: $@b.Price</li>
-    </ul>
+    <partial name="BookSummary" model="b" />
 }
 
-<div page-model="@Model.PaginationInfo" page-action="Index"></div>
+@*Created own TagHelper for page numbers!*@
+<div page-model="@Model.PaginationInfo" page-action="Index" page-classes-enabled="true" page-class="btn"
+     page-class-normal="btn-outline-dark" page-class-selected="btn-primary" class="btn-group pull-right m-1"></div>
